# learn-dl

./: .gitignore  .gitignore.amltmp  08_questionnaire.ipynb  09_chapter_notebook.ipynb  README.md  basic_mnist_example.ipynb  cbow_human_numbers.ipynb  fastbook_ch4_questionnaire.ipynb  fastbook_ch5_questionnaire.ipynb  mnist_example.ipynb  pet_breeds_example.ipynb  pyproject.toml  pytorch_notes.md
0 - Examples/: mnist_example.ipynb
01 -Your Deep Learning Journey/: 01 - Your Deep Learning journey.md
05 - Image Classification/: 05_pet_breeds.ipynb
08 - Collaborative Filtering Deep Dive/: 08 - Collaborative filtering deep dive.md  08_chapter_notebook.ipynb
09 - Tabular Modeling Deep Dive/: 09_notes.md
10 - NLP Deep Dive - RNNs/: 10_notes.md
12 - A Language Model from Scratch/: 12_notes.md
2 - From Model to Production/: 02 - From model to production.md
4 - Under the Hood - Training a Digit Classifier/: 04_mnist_basics.ipynb
Causality/: 1_bayesian_networks.ipynb  (+1 more)
Causality/Bayesian networks/: 1_bayesian_networks.ipynb  2_bayesian_networks_inference.ipynb  3_learning.ipynb  README.md  bayesian_networks.tex  pyproject.toml
Foundation models/Preference-tuning/: 1_rlhf.ipynb  2_dpo.ipynb  README.md  pyproject.toml
_Book - NLP with Transformers/: README.md  ch02_tokenization.ipynb  ch03_transformers_anatomy.ipynb  ch04_multilingual_entity_recognition.ipynb  ch05_text_generation.ipynb  ch06_text_summarization.ipynb  ch07_question_answering.ipynb  ch10_training_from_scratch.ipynb  ch11_future_directions.ipynb  ch2_tokenization.ipynb  ch7_question_answering.ipynb  ch9_dealing_wtih_few_labels.ipynb  pyproject.toml
(+260 files in other folders)
