[tool.poetry]
name = "-book - nlp with transformers"
version = "0.1.0"
description = ""
authors = ["Fernando Rodriguez <fernando.rodriguez@ailylabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.6,<3.11"
transformers = "^4.45.2"
datasets = "^3.0.1"
torch = "^2.4.1"
ipywidgets = "^8.1.5"
pytorch-lightning = "^2.4.0"
easydict = "^1.13"
nltk = "^3.9.1"
tiktoken = "^0.8.0"
protobuf = "^5.28.2"
sentencepiece = "^0.2.0"
evaluate = "^0.4.3"
sacrebleu = "^2.4.3"
rouge-score = "^0.1.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
scikit-multilearn = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
