[tool.poetry]
name = "bayesian networks"
version = "0.1.0"
description = ""
authors = ["Fernando Rodriguez <fernando.rodriguez@ailylabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pgmpy = "^0.1.25"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
