[tool.poetry]
name = "preference-tuning"
version = "0.1.0"
description = ""
authors = ["Fernando Rodriguez <fernando.rodriguez@ailylabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.6,<3.11"
jupyter = "^1.0.0"
torch = "^2.4.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
